--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: objective-c
 
-osx_image: xcode61
-
+osx_image: xcode8.3
+rvm:
+- 2.2
 before_install:
 - chmod a+x ./Scripts/install.sh
 - chmod a+x ./Scripts/build.sh
